# Sulautettujen-j-rjestelmien-ohjelmistokehitys

./: README.md  Week2.c  main.c  week3.c
.github/workflows/: tests.yml
4_Unit_testing/: CMakeLists.txt  TimeParser.cpp  TimeParser.h  TimeParserTest.cpp
4_Unit_testing/test_cases/: TimeParserTest.cpp
Oma_liikennevalo-ohjelma/: CMakeLists.txt  main.c
week6_robot/src/: main.c
week6_robot/tests/: serial_time_parser.robot
week6_robot/tests/results/: log.html  output.xml  report.html
